<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.javadsh98.mjpersiondictionary.ui.main.fragment.home.HomeFragment"
        android:label="@string/title_main_dictionary"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.javadsh98.mjpersiondictionary.ui.main.fragment.favorite.FavoriteFragment"
        android:label="@string/label_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.javadsh98.mjpersiondictionary.ui.main.fragment.History.HistoryFragment"
        android:label="@string/label_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.javadsh98.mjpersiondictionary.ui.main.fragment.more.MoreFragment"
        android:label="@string/label_more"
        tools:layout="@layout/fragment_more" />

</navigation>