<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:viewBindingIgnore="true"
    tools:context=".ui.main.fragment.more.MoreFragment">

    <TextView
        android:id="@+id/textview_more_exit"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_more_50dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/text_more_exit"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_all_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_more_share_source_code" />

    <TextView
        android:id="@+id/textview_more_source_code"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_more_50dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/text_more_source_code"
        android:textSize="@dimen/text_size_all_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_more_share_source_code"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_more_50dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/text_more_share_this_app"
        android:textSize="@dimen/text_size_all_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_more_source_code" />

</androidx.constraintlayout.widget.ConstraintLayout>